apps/peanut/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: peanut
  labels:
    name: peanut
